got submit score working, fixed bug with game stats on start over (hopefully)

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_APP_BASE_API=https://pokesetapi.onrender.com/api
+VITE_APP_BASE_API=http://127.0.0.1:5000/api
+VITE_APP_BASE_API2=https://pokesetapi.onrender.com/api
